syntax = "proto3";

package mdh.dvc.protobuf;

message OrderBook {
  string  id          = 1;
  string  symbol      = 2;
  string  timestamp   = 3;
  uint64  level       = 4;
  string  bid_price   = 5;
  string  bid_size    = 6;
  string  ask_price   = 7;
  string  ask_size    = 8;
}